feat: Added code to sync the build status from ci-captain